# fortaleza-purchase-agent

./: .env.example  .gitignore  Dockerfile  README.md  SETUP_ENVIRONMENT.md  WARP.md  debug_cart.py  debug_checkout.py  debug_login.py  debug_order_summary.py  debug_search.py  pyproject.toml  pytest.ini  requirements.txt  test_age_verification.py  test_approval_flow.py  test_correct_fortaleza.py  test_phase2_navigation.py
.github/: SETUP.md
.github/workflows/: deploy.yml
agents/fortaleza_agent/: __init__.py  agent.py
browser-worker/: package-lock.json  package.json  server.js
docs/: Node_Playwright_Worker_Service.md  WEBHOOK_CONFIGURATION.md
scripts/: debug_cart.py  debug_checkout.py  debug_login.py  debug_order_summary.py  debug_search.py  test_agent_manual.py  test_security_alerts.sh  test_webhook_local.py
src/app/: main.py  webhook.py
src/core/: approval.py  browser.py  browser_service.py  config.py  errors.py  logging.py  notify.py  secrets.py
src/tools/: cart.py  checkout.py  login.py  navigate.py  verify_age.py
terraform/: README.md  apis.tf  cloudrun.tf  iam.tf  import_secrets.sh  monitoring.tf  provider.tf  secrets.tf  variables.tf
tests/: conftest.py  test_approval.py  test_browser_service.py  test_cart.py  test_checkout.py  test_config_validation.py  test_login.py  test_navigation.py  test_phase1.py  test_phase2_navigation.py  test_server.sh  test_webhook_approval.py  test_webhook_mode.py
